bug 553981 - handle Hangul Jamo sequences and other special cases when marking clusters. r=karlt a=roc